--- a/documentation/webpage.html
+++ b/documentation/webpage.html
@@ -5,19 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel</title>
     <style>
+      body {
+        background-image: url("images/resort.JPG");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+            }
+
+      h1 {
+        text-align: center;
+        text-align-last: center;
+        vertical-align: center;
+      }
       #myVideo {
         position: fixed;
         right: 0;
         bottom: 0;
-        max-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
   <body>
-    <video autoplay muted loop id="myVideo">
+    <!-- <video autoplay muted loop id="myVideo">
         <source src="images/video.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
-      </video>
+      </video> -->
+    <h1>Exploring destinations, creating memories</h1>
   </body>
 </html>
