--- a/src/webpage.html
+++ b/src/webpage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luxury Travels</title>
   <link rel="icon" type="image/x-icon" href="images/travel-favicon.ico" />
-  <link href="main.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div id="navbar" class="navbar">
@@ -82,7 +82,7 @@
 
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h1>Pricing</h1>
+        <h1>Pricing Plan</h1>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
